# GansDataEngineering

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  example.env  index.html  main.py  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build.yml  docs.yml
airports/: index.html
cities/: index.html
database/: index.html
docs/: README.md  mkdocs.yml
docs/docs/: airports.md  cities.md  database.md  flights.md  index.md  install.md  usage.md  weather.md
flights/: index.html
install/: index.html
pipeline/: __init__.py  airports.py  cities.py  create_database.sql  database.py  flights.py  weather.py
usage/: index.html
weather/: index.html
